--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,7 @@
   "description": "Good/Cheap/Fast  -  pick two",
   "main": "index.js",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^2.4.1"
   },
   "repository": {
     "type": "git",
