--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettier:fix": "prettier './src/**/*.{css,js}' --write"
   },
